@@ -1,5 +1,11 @@
 2005-07-05  Christopher Faylor  <cgf@timesys.com>
 
+	* dcrt0.cc (cygwin_exit): Mark as "noreturn".
+	* sigproc.cc (child_info::ready): Don't signal parent that we are a
+	cygwin process if we are dynamically loaded.
+
+2005-07-05  Christopher Faylor  <cgf@timesys.com>
+
 	* malloc.cc: Update to version 2.8.2.
 
 2005-07-05  Corinna Vinschen  <corinna@vinschen.de>
